<resources>
    <string name="app_name">LoL直播</string>

    <string name="game">游戏</string>
    <string name="live">直播</string>
    <string name="video">视频</string>
    <string name="gif">动图</string>
    <string name="information">资讯</string>
    <string name="shop">店铺</string>
    <string name="channel">频道</string>
    <string name="follow">关注</string>
    <string name="mine">我</string>
    <string name="setting">设置</string>
    <string name="search">搜索</string>
    <string name="scan">浏览</string>
    <string name="advice_channel">推荐频道</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="tip_exit_app">再按一次退出程序</string>

    <string name="newest_video">最新视频</string>
    <string name="commentary_video">解说视频</string>
    <string name="match_video">赛事视频</string>
    <string name="interesting_video">趣味集锦</string>
</resources>
