<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_view"
    android:layout_width="@dimen/navigation_width"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:orientation="vertical"
    android:background="@color/white">

    <ScrollView
        android:id="@+id/sv_navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:theme="@style/ThemeOverlay.AppCompat.Light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:gravity="bottom"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <com.blue339.lolive.views.CircleImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:src="@drawable/default_head"
                    app:civ_border_color="@android:color/white"
                    app:civ_border_width="2dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:text="Android Studio"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="android.studio@android.com" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical|left"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/scan"
                android:textSize="14sp"
                android:textColor="@color/gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorDividerLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                android:background="@color/white">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:drawableLeft="@drawable/ic_widgets_white_24dp"
                    android:drawableTint="@color/gray"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="@string/game"
                    android:textColor="@color/gray"
                    android:textSize="15sp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:src="@drawable/ic_navigate_next_white_24dp"
                    android:tint="@color/gray"
                    android:background="@android:color/transparent"/>

            </LinearLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <RadioButton
                    android:id="@+id/rb_tv_live"
                    android:drawableLeft="@drawable/ic_live_tv_white_24dp"
                    android:drawableRight="@drawable/ic_navigate_next_white_24dp"
                    android:text="@string/live"
                    android:checked="true"
                    style="@style/RadioButtonStyle"/>

                <RadioButton
                    android:id="@+id/rb_video"
                    android:drawableLeft="@drawable/ic_video_library_white_24dp"
                    android:drawableRight="@drawable/ic_navigate_next_white_24dp"
                    android:text="@string/video"
                    style="@style/RadioButtonStyle"/>

                <RadioButton
                    android:id="@+id/rb_gif"
                    android:drawableLeft="@drawable/ic_photo_library_white_24dp"
                    android:drawableRight="@drawable/ic_navigate_next_white_24dp"
                    android:text="@string/gif"
                    style="@style/RadioButtonStyle"/>

                <RadioButton
                    android:id="@+id/rb_information"
                    android:drawableLeft="@drawable/ic_library_books_white_24dp"
                    android:drawableRight="@drawable/ic_navigate_next_white_24dp"
                    android:text="@string/information"
                    style="@style/RadioButtonStyle"/>

                <RadioButton
                    android:id="@+id/rb_shop"
                    android:drawableLeft="@drawable/ic_shopping_cart_white_24dp"
                    android:drawableRight="@drawable/ic_navigate_next_white_24dp"
                    android:text="@string/shop"
                    style="@style/RadioButtonStyle"/>

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorDividerLine" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical|left"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/advice_channel"
                android:textSize="14sp"
                android:textColor="@color/gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorDividerLine" />

            <LinearLayout
                android:id="@+id/lv_advice_channel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:background="@color/colorThemeGray">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="@dimen/navigation_item_text_size"
            android:textColor="@color/colorTheme"
            android:background="@drawable/navigation_button_bg_selector"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorDividerLine" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="@dimen/navigation_item_text_size"
            android:textColor="@color/colorTheme"
            android:background="@drawable/navigation_button_bg_selector"/>

    </LinearLayout>

</FrameLayout>
